@@ -2,6 +2,7 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * Add test-filter utility
  * Fix bug in unloading modules
  * Fix dependency system for modules
  * Add testsuite
